resolve pr comments on ADDDURATION